--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Motor Text-to-SQL | Consultas de Banco de Dados em Linguagem Natural</title>
+    <title>Text-to-SQL | Consultas de Banco de Dados em Linguagem Natural</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 </head>
@@ -20,7 +20,7 @@
                         <i class="fas fa-database"></i>
                     </div>
                     <div class="logo-text">
-                        <h1>Motor Text-to-SQL</h1>
+                        <h1>Text-to-SQL</h1>
                         <p>Consultas de Banco de Dados em Linguagem Natural</p>
                     </div>
                 </div>
